lattigo_hevm_stub/libLATTIGO_HEVM.h

/* Code generated by cmd/cgo; DO NOT EDIT. */

/* package command-line-arguments */


#line 1 "cgo-builtin-export-prolog"

#include <stddef.h>

#ifndef GO_CGO_EXPORT_PROLOGUE_H
#define GO_CGO_EXPORT_PROLOGUE_H

#ifndef GO_CGO_GOSTRING_TYPEDEF
typedef struct { const char *p; ptrdiff_t n; } _GoString_;
extern size_t _GoStringLen(_GoString_ s);
extern const char *_GoStringPtr(_GoString_ s);
#endif

#endif

/* Start of preamble from import "C" comments.  */


#line 13 "hevm_stub.go"

#include <stdint.h>
#include <stdlib.h>
#include <stdbool.h>

typedef struct {
    uint32_t magic_number;      // 0x4845564D
    uint32_t hevm_header_size;  // 8 + sizeof(ConfigHeader)
    struct {
        uint64_t arg_length;
        uint64_t res_length;
    } config_header;
} HEVMHeader;

typedef struct {
    uint64_t config_body_length;
    uint64_t num_operations;
    uint64_t num_ctxt_buffer;
    uint64_t num_ptxt_buffer;
    uint64_t init_level;
    uint64_t reserved;
} ConfigBody;

typedef struct {
    uint16_t opcode;
    uint16_t dst;
    uint16_t lhs;
    uint16_t rhs;
} HEVMOperation;


#line 1 "cgo-generated-wrapper"


/* End of preamble from import "C" comments.  */


/* Start of boilerplate cgo prologue.  */
#line 1 "cgo-gcc-export-header-prolog"

#ifndef GO_CGO_PROLOGUE_H
#define GO_CGO_PROLOGUE_H

typedef signed char GoInt8;
typedef unsigned char GoUint8;
typedef short GoInt16;
typedef unsigned short GoUint16;
typedef int GoInt32;
typedef unsigned int GoUint32;
typedef long long GoInt64;
typedef unsigned long long GoUint64;
typedef GoInt64 GoInt;
typedef GoUint64 GoUint;
typedef size_t GoUintptr;
typedef float GoFloat32;
typedef double GoFloat64;
#ifdef _MSC_VER
#if !defined(__cplusplus) || _MSVC_LANG <= 201402L
#include <complex.h>
typedef _Fcomplex GoComplex64;
typedef _Dcomplex GoComplex128;
#else
#include <complex>
typedef std::complex<float> GoComplex64;
typedef std::complex<double> GoComplex128;
#endif
#else
typedef float _Complex GoComplex64;
typedef double _Complex GoComplex128;
#endif

/*
  static assertion to make sure the file is being used on architecture
  at least with matching size of GoInt.
*/
typedef char _check_for_64_bit_pointer_matching_GoInt[sizeof(void*)==64/8 ? 1:-1];

#ifndef GO_CGO_GOSTRING_TYPEDEF
typedef _GoString_ GoString;
#endif
typedef void *GoMap;
typedef void *GoChan;
typedef struct { void *t; void *v; } GoInterface;
typedef struct { void *data; GoInt len; GoInt cap; } GoSlice;

#endif

/* End of boilerplate cgo prologue.  */

#ifdef __cplusplus
extern "C" {
#endif

extern uintptr_t initFullVM(char* path, _Bool useGPU);
extern uintptr_t initClientVM(char* path);
extern uintptr_t initServerVM(char* path);
extern void freeVM(uintptr_t h);
extern uintptr_t create_context(char* path);
extern void freeContext(uintptr_t h);
extern void loadClient(uintptr_t vmH, uintptr_t ctxH);
extern void load(uintptr_t h, char* constPath, char* hevmPath);
extern void loadProgram(uintptr_t h, char* constPath, char* hevmPath);
extern void preprocess(uintptr_t h);
extern void run(uintptr_t h);
extern int BootEnable(uintptr_t h);
extern void EncryptTo(uintptr_t h, int dst, double* data, int n, int level, int log2Scale);
extern void DecryptFrom(uintptr_t h, int src, double* out, int n);
extern int CTLevel(uintptr_t h, int idx);
extern int CTLog2Scale(uintptr_t h, int idx);
extern void OpAddCC(uintptr_t h, int dst, int a, int b);
extern void OpMulCC(uintptr_t h, int dst, int a, int b);
extern void OpRescale(uintptr_t h, int dst, int src);
extern void OpRotate(uintptr_t h, int dst, int src, int k);
extern int BootstrapTo(uintptr_t h, int dst, int src);
extern int Slots(uintptr_t h);
extern int LogN(uintptr_t h);
extern int MaxLevel(uintptr_t h);
extern int LogDefaultScale(uintptr_t h);
extern int64_t getArgLen(uintptr_t h);
extern int64_t getResLen(uintptr_t h);
extern void decrypt_result(uintptr_t h, int64_t resIdx, double* out, int n);
extern int64_t getResIdx(uintptr_t h, int64_t i);
extern uintptr_t getCtxt(uintptr_t h, int64_t i);
extern void setCtxt(uintptr_t h, int64_t i, uintptr_t ctH);
extern void freeCtxt(uintptr_t ctH);
extern void setDebug(uintptr_t h, _Bool enable);
extern void setToGPU(uintptr_t h, _Bool ongpu);
extern void printMem(uintptr_t h);

#ifdef __cplusplus
}
#endif